--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,32 +1,56 @@
 <resources>
+
     <string name="app_name">Procure_Pro</string>
-    <string name="startBtn">start</string>
-    <string name="stopBtn">Stop</string>
-    <string name="description">Here are the Directions to Get</string>
-    <string name="discription2">First,</string>
-    <string name="directions">direction</string>
-    <string name="adminTv">Enter Site Manager Name and Password</string>
-    <string name="btnLogin">Login</string>
-    <string name="adminpanelTV">Welcome Site Manager</string>
-    <string name="addSectionBtn">Add section</string>
-    <string name="addProductbtn">add product</string>
-    <string name="updateProductbtn">update</string>
+
+    <!--    text views-->
     <string name="TVprocurePro">ProcurePro</string>
     <string name="TVupdatesection">Update Section</string>
-    <string name="TvSectionName">Section Name</string>
-    <string name="TvDirections">Directions</string>
-    <string name="AddBtn">Add</string>
-    <string name="UpdateBtn">Update</string>
-    <string name="TvAddproduct">Add a New Product</string>
+    <string name="TvStaffId">Staff Id</string>
+    <string name="TvOrderNumber">Order Number</string>
+    <string name="TvAddDelivery">Add a New Delivery</string>
     <string name="TvUpdateproduct">Update Product</string>
     <string name="TvProductName">Product Name</string>
     <string name="TvSection">Section</string>
-    <string name="productsBtn">Add purchase orders</string>
-    <string name="sectionsBtn">Manage purchase orders</string>
-    <string name="mapBtn">Supplier Management</string>
-    <string name="homeBtn">Deliver Management</string>
     <string name="TvProducts">Products</string>
     <string name="Tvsections">Sections</string>
-    <string name="itmbox">Here the available sections in this supermarket</string>
+    <string name="TvNewOrder">Add New Order</string>
     <string name="TvsecWI">Here is whats inside section</string>
+    <string name="TvSiteManager">Welcome Site Manager</string>
+    <string name="TVlogin">Enter Site Manager Name and Password</string>
+    <string name="TvSite">Site</string>
+    <string name="TvItem">Item</string>
+    <string name="TvPrice">Price</string>
+    <string name="TvAddress">Address</string>
+    <string name="Tvorder_number">Order Number</string>
+    <string name="TvPhone_number">Phone Number</string>
+    <string name="Tvoreders">Oreders</string>
+    <string name="TvDeliveries">Deliveries</string>
+    <string name="TvDate">Date</string>
+
+
+    <!--    buttons-->
+
+    <string name="AddBtn">Add</string>
+    <string name="UpdateBtn">Update</string>
+    <string name="productsBtn">Add purchase orders</string>
+    <string name="sectionsBtn">Manage purchase orders</string>
+    <string name="mapBtn">Order Status</string>
+    <string name="addDeliveryBtn">Add Delivery</string>
+    <string name="homeBtn">Deliver Management</string>
+    <string name="btnLogin">Login</string>
+    <string name="addSectionBtn">Add section</string>
+    <string name="addProductbtn">add product</string>
+    <string name="updateProductbtn">update</string>
+
+
+    <!--    hints-->
+    <string name="add_staff_id">Add Staff Id</string>
+    <string name="add_order_number">Add Order Number</string>
+    <string name="add_phone_number">Add Phone Number</string>
+    <string name="add_site_name">Add Site ID</string>
+    <string name="add_item_name">Add Item Name</string>
+    <string name="add_price">Add Price</string>
+    <string name="add_address">Add Address</string>
+
+
 </resources>
