Approve order done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="TvUpdateOrder">Update Order</string>
     <string name="TvsecWI">Here is whats inside section</string>
     <string name="TvSiteManager">Welcome Site Manager</string>
+    <string name="TvAdmin">Welcome Site Admin</string>
     <string name="TVlogin">Enter Site Manager Name and Password</string>
     <string name="TvSite">Site</string>
     <string name="TvItem">Item</string>
@@ -24,7 +25,7 @@
     <string name="TvAddress">Address</string>
     <string name="Tvorder_number">Order Number</string>
     <string name="TvPhone_number">Phone Number</string>
-    <string name="Tvoreders">Oreders</string>
+    <string name="Tvoreders">Orders</string>
     <string name="TvDeliveries">Deliveries</string>
     <string name="TvDate">Date</string>
     <string name="TvPrice">Price</string>
@@ -32,12 +33,13 @@
     <string name="TvOrderStatus">Order Status</string>
 
 
-
     <!--    buttons-->
 
     <string name="AddBtn">Add</string>
     <string name="UpdateBtn">Update</string>
+    <string name="ApproveBtn">Approve</string>
     <string name="DeleteBtn">Delete</string>
+    <string name="DeclineBtn">Dectilne</string>
     <string name="productsBtn">Add purchase orders</string>
     <string name="sectionsBtn">Manage purchase orders</string>
     <string name="mapBtn">Order Status</string>
